compiler/tools/fpp-check/test/spec_loc/constant_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/spec_loc/constant_error.fpp: 1.22
locate constant c at "incorrect.fpp"
                     ^
error: incorrect location path [ local path prefix ]/compiler/tools/fpp-check/test/spec_loc/incorrect.fpp
actual location is [ local path prefix ]/compiler/tools/fpp-check/test/spec_loc/constant_error.fpp: 2.1
constant c = 0
^
